ci/kube-cfg/kube-deploy-2clb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-two-container
spec:
  selector:
    matchLabels:
      app: go-app-2-c
  replicas: 1
  template:
    metadata:
      labels:
        app: go-app-2-c
    spec:
      containers:
        - name: c-1
          image: m7dock/go-app
          ports:
            - name: hongkong
              containerPort: 8080
        - name: c-2
          image: m7dock/go-app
          command:
            - ./main
            - "--port"
            - "9080"
          ports:
            - name: singapore
              containerPort: 9080
---
kind: Service
apiVersion: v1
metadata:
  name: fedex
spec:
  selector:
    app: go-app-2-c
  ports:
    - protocol: TCP
      port: 8080
      targetPort: hongkong
      name: kwloon
---
kind: Service
apiVersion: v1
metadata:
  name: ups
spec:
  selector:
    app: go-app-2-c
  ports:
    - protocol: TCP
      port: 8080
      targetPort: singapore
      name: kwloon
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: new-york
spec:
  alternateBackends:
    - kind: Service
      name: ups
      weight: 67
  host: new-york-una.apps.192.168.0.170.nip.io
  port:
    targetPort: kwloon
  to:
    kind: Service
    name: fedex
    weight: 33
  wildcardPolicy: None
status:
  ingress:
    - conditions:
      host: new-york-una.apps.192.168.0.170.nip.io
      routerName: router
      wildcardPolicy: None
